--- a/src/blog/templates/blog/article_list.html
+++ b/src/blog/templates/blog/article_list.html
@@ -3,18 +3,17 @@
 {% block content %}
 
     <h1 class="display-4">Blog Posts</h1>
-    <a class="btn btn-primary btn-lg" href="{% url 'blog:article-create'%}" role="button">Add Post</a>
-    <a class="btn btn-secondary btn-lg" href="{% url 'home'%}" role="button">Back</a>
+    <a class="btn btn-primary" href="{% url 'blog:article-create'%}" role="button">Add Post</a>
+    <a class="btn btn-secondary" href="{% url 'home'%}" role="button">Back</a>
     <hr class="my-4">
-  
-    {% for instance in object_list %}
-      
-        <a class="btn btn-light btn-lg btn-block" style="text-align:left" href='{{instance.get_absolute_url}}'>
-          <h3>{{instance.title}}</h3>
-          <p>{{instance.content}}</p>
-        </a>
-      
-      
-    {% endfor %}
 
+    {% for instance in object_list %}
+
+        <a class="btn btn-light btn-block" style="text-align:left" href='{{instance.get_absolute_url}}'>
+          <h5>{{instance.title}}</h5>
+          <p>{{instance.content}}</p>
+
+        </a>
+
+    {% endfor %}
 {% endblock %}
