--- a/src/blog/templates/blog/article_update.html
+++ b/src/blog/templates/blog/article_update.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Add New Post</h2>
+<h2>Update Post Details</h2>
 <hr class="my-4">
 <form action='.' method='POST'>{%csrf_token%}
   {{form.as_p}}
   <input type='submit' value='Save' class="btn btn-primary"/>
-  <a href="{% url 'blog:article-list' %}" class="btn btn-secondary">Back</a>
+  <a href="{% url 'blog:article-detail' object.id %}" class="btn btn-secondary">Back</a>
 </form>
 {% endblock %}
