--- a/src/products/templates/products/product_delete.html
+++ b/src/products/templates/products/product_delete.html
@@ -1,16 +1,14 @@
 {%extends 'base.html'%}
 
 {%block content%}
-<div class="jumbotron">
-  <div class='container'>
-	  <form action='.' method='POST'>{% csrf_token %}
-      <h1 class="display-4">Do you want to delete the product '{{object.title}}'?</h1>
-      
-      <hr class="my-4">
-      
-      <input class="btn btn-danger btn-lg" type='submit' value='Delete' />
-			<a class="btn btn-secondary btn-lg"href="{% url 'products:product-list' %}">Back</a>
-    </form>
-  </div>
-</div>
+
+  <form action='.' method='POST'>{% csrf_token %}
+    <h2>Do you want to delete the product '{{object.title}}'?</h2>
+
+    <hr class="my-4">
+
+    <input class="btn btn-danger" type='submit' value='Delete' />
+		<a class="btn btn-secondary"href="{% url 'products:product-detail' object.id %}">Back</a>
+  </form>
+
 {%endblock%}
