--- a/src/products/templates/products/product_list.html
+++ b/src/products/templates/products/product_list.html
@@ -3,18 +3,15 @@
 {% block content %}
 
     <h1 class="display-4">List of Products</h1>
-    <a class="btn btn-primary btn-lg" href="{% url 'products:product-create'%}" role="button">Add Product</a>
-    <a class="btn btn-secondary btn-lg" href="{% url 'home'%}" role="button">Back</a>
+    <a class="btn btn-primary" href="{% url 'products:product-create'%}" role="button">Add Product</a>
+    <a class="btn btn-secondary" href="{% url 'home'%}" role="button">Back</a>
     <hr class="my-4">
-  
+
     {% for instance in object_list %}
-      
-        <a class="btn btn-light btn-lg btn-block" style="text-align:left" href='{{instance.get_absolute_url}}'>
-          <h3>{{instance.title}} (¥{{instance.price}})</h3>
-          <p>{{instance.description}}</p>
-        </a>
-      
-      
+      <a class="btn btn-light btn-block" style="text-align:left" href='{{instance.get_absolute_url}}'>
+        <h5>{{instance.title}} (¥{{instance.price}})</h5>
+        <p>{{instance.description}}</p>
+      </a>
     {% endfor %}
 
 {% endblock %}
