--- a/src/products/templates/products/product_update.html
+++ b/src/products/templates/products/product_update.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<h2>Update Product Detail</h2>
+<hr class="my-4">
+
   <form action='.' method='POST'>{%csrf_token%}
+    <div class="form-group">
     {{form.as_p}}
-    <input type='submit' value='Save'/>
+    </div>
+    <input type='submit' value='Save' class="btn btn-primary"/>
+    <a href="{% url 'products:product-detail' object.id %}" class="btn btn-secondary">Back</a>
   </form>
 
-<a href="{% url 'products:product-detail' object.id %}">Back</a>
-{% endblock %} 
+{% endblock %}
