--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,12 +15,14 @@
 <body>
 
     {% include 'navbar.html' %}
-    
-    <div class="jumbotron">
+
+    <div class="jumbotron" style="height:100vh">
         <div class='container'>
             {% block content %}{% endblock %}
         </div>
     </div>
-    
+
+    {% include 'footer.html' %}
+
 </body>
 </html>
