--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" style="padding-bottom:20px">
+<footer class="footer bg-dark" style="height:100px">
   <div class="container">
     <span class="text-muted">&copy; Django-WebApp</span>
   </div>
