--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -9,7 +9,7 @@
             <li class="nav-item active"><a class="nav-link" href="{% url 'home'%}">Home <span class="sr-only">(current)</span></a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'products:product-list'%}">Products</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'blog:article-list'%}">Blogs</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'courses:courses-list'}">Courses</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'courses:course-list'%}">Courses</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'contact'%}">Contact</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'social'%}">Social</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'admin:index'%}">Admin</a></li>
